--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.11.1",
     "clsx": "^2.1.1",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.294.0",
     "motion": "^12.23.3",
     "mysql2": "^3.14.2",
     "next": "14.0.0",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.11.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.3.1"
