--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prisma": "^6.11.1",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^18.3.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
